--- a/.gitlab/ci/shellcheck.gitlab-ci.yml
+++ b/.gitlab/ci/shellcheck.gitlab-ci.yml
@@ -1,6 +1,7 @@
 test-shellcheck:
   stage: test
   image: koalaman/shellcheck-alpine:stable
+  needs: []
   script:
     - shellcheck src/bin/auto-deploy test/verify-deployment-database
 
@@ -9,5 +10,6 @@ test-shfmt:
   image:
     name: peterdavehello/shfmt:2.6.4
     entrypoint: ["/bin/sh", "-c"]
+  needs: []
   script:
     - shfmt -i 2 -ci -l -d src/bin/*
