--- a/.gitlab/ci/test.gitlab-ci.yml
+++ b/.gitlab/ci/test.gitlab-ci.yml
@@ -308,3 +308,30 @@ test-delete:
     - helm get production
     - auto-deploy delete
     - helm get production && expected_error || failed_as_expected
+
+test-delete-postgresql-beta:
+  extends: test-deploy-postgresql-beta
+  script:
+    - auto-deploy initialize_tiller
+    - auto-deploy download_chart
+    - auto-deploy deploy
+    - helm get production
+    - helm get production-postgresql
+    - auto-deploy delete
+    - helm get production && expected_error || failed_as_expected
+    - helm get production-postgresql && expected_error || failed_as_expected
+
+test-delete-canary-postgresql-beta:
+  extends: test-deploy-postgresql-beta
+  script:
+    - auto-deploy initialize_tiller
+    - auto-deploy download_chart
+    - auto-deploy deploy canary
+    - helm get production-canary
+    - auto-deploy deploy
+    - helm get production
+    - helm get production-postgresql
+    - auto-deploy delete canary
+    - helm get production-canary && expected_error || failed_as_expected
+    - helm get production
+    - helm get production-postgresql
