--- a/.gitlab/ci/test.gitlab-ci.yml
+++ b/.gitlab/ci/test.gitlab-ci.yml
@@ -269,6 +269,14 @@ test-deploy-postgresql-beta:
     - helm get values production --output json | grep "postgres://user:testing-password@production-postgresql:5432/production"
     - ./test/verify-deployment-database production postgresql
 
+test-deploy-canary:
+  extends: test-deploy
+  script:
+    - auto-deploy initialize_tiller
+    - auto-deploy download_chart
+    - auto-deploy deploy canary
+    - helm get production-canary
+
 test-deploy-modsecurity:
   extends: test-deploy
   variables:
