--- a/.gitlab/ci/test.gitlab-ci.yml
+++ b/.gitlab/ci/test.gitlab-ci.yml
@@ -298,6 +298,39 @@ test-deploy-postgresql-beta:
     - helm get values production --output json | grep "postgres://user:testing-password@production-postgresql:5432/production"
     - ./test/verify-deployment-database production postgresql
 
+test-deploy-does-not-delete-old-postgres-by-default:
+  extends: test-deploy
+  script:
+    - auto-deploy initialize_tiller
+    - auto-deploy download_chart
+    # make sure old posgres deployment exists
+    - export AUTO_DEVOPS_POSTGRES_CHANNEL=1
+    - auto-deploy deploy
+    - ./test/verify-deployment-database production production-postgres
+    # test that the deploy job fails
+    - export POSTGRES_VERSION='9.6.16'
+    - export AUTO_DEVOPS_POSTGRES_CHANNEL=2
+    - auto-deploy deploy && expected_error || failed_as_expected
+    # assert that postgres still exists
+    - ./test/verify-deployment-database production production-postgres
+
+test-deploy-deletes-old-postgres-if-opt-in:
+  extends: test-deploy
+  script:
+    - auto-deploy initialize_tiller
+    - auto-deploy download_chart
+    - export AUTO_DEVOPS_POSTGRES_CHANNEL=1
+    # make sure old postgres deployment exists
+    - auto-deploy deploy
+    - ./test/verify-deployment-database production production-postgres
+    # test that the deploy job succeeds
+    - export POSTGRES_VERSION='9.6.16'
+    - export AUTO_DEVOPS_POSTGRES_CHANNEL=2
+    - export AUTO_DEVOPS_POSTGRES_DELETE_V1=1
+    - auto-deploy deploy
+    # test that the new postgres is up
+    - ./test/verify-deployment-database production postgresql
+
 test-deploy-canary:
   extends: test-deploy
   script:
