feat: Show debug logs if AUTO_DEVOPS_DEPLOY_DEBUG
Continuation of 89c5da50d82bd05128ce1b6707fcd5e46c8d6c83 but with
semantic commit comment. Also add tests to verify tiller.log is present

--- a/.gitlab/ci/test.gitlab-ci.yml
+++ b/.gitlab/ci/test.gitlab-ci.yml
@@ -299,6 +299,11 @@ test-deploy-debug:
   extends: test-deploy
   variables:
     AUTO_DEVOPS_DEPLOY_DEBUG: "1"
+  script:
+    - auto-deploy initialize_tiller
+    - auto-deploy download_chart
+    - auto-deploy deploy
+    - cat tiller.log
 
 test-deploy-postgresql-channel-1:
   extends: test-deploy
